--- a/d6_function_karel/code_day_6.ipynb
+++ b/d6_function_karel/code_day_6.ipynb
@@ -425,8 +425,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'front_is_clear' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m     turn_left()\n\u001b[1;32m      4\u001b[0m     turn_left()\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[43mfront_is_clear\u001b[49m:\n\u001b[1;32m      7\u001b[0m     move()\n\u001b[1;32m      8\u001b[0m     turn_left()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'front_is_clear' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def turn_right():\n",
+    "    turn_left()\n",
+    "    turn_left()\n",
+    "    turn_left()\n",
+    "    \n",
+    "while front_is_clear:\n",
+    "    move()\n",
+    "    turn_left()\n",
+    "\n",
+    "while not at_goal():\n",
+    "    if right_is_clear():\n",
+    "        turn_right()\n",
+    "        move()\n",
+    "    elif front_is_clear():\n",
+    "        move()\n",
+    "    else:\n",
+    "        turn_left()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
